--- a/src/components/EventCard.astro
+++ b/src/components/EventCard.astro
@@ -39,7 +39,7 @@
     </div>
   </div>
   <div class="add-to-cart-btn">
-    <button class=" mr-9">View Event</button>
+    <button class=" mr-9"> <a href="">View Event</a></button>
   </div>
 </div>
 
