many minor things got changed

--- a/src/components/BlogEditor.astro
+++ b/src/components/BlogEditor.astro
@@ -52,7 +52,7 @@ if (id != 'new') {
 
     <label>
       <p>Image</p>
-      <input type="file" class="w-full" name="image" />
+      <input type="file" class="w-full" name="image" required/>
     </label>
 
     <input type="text" name="authorId" hidden value={userId} />
