--- a/src/pages/events/index.astro
+++ b/src/pages/events/index.astro
@@ -12,7 +12,7 @@ import Layout from '@layouts/Layout.astro';
       <EventCard />
       <EventCard  />
       <EventCard  />
-      <EventCard />
+      <a href="/events/1"><EventCard /></a>
     </div>
   </section>
 </Layout>
