--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import { githubLink, instagramLink, linkedinLink } from '@lib/constants';
 import { Icon } from 'astro-icon/components';
 ---
 
-<footer class="content-container tracking-wider pt-8 text-center md:text-left mt-20">
+<footer class="content-container tracking-wider pt-8 text-center md:text-left mt-20" transition:persist>
   <hr class="my-2" />
   <div class="flex flex-col flex-wrap md:flex-row md:flex-nowrap md:items-center lg:items-start py-2 mx-14">
     <div class="m-6 flex flex-grow md:mt-0 md:pl-20">
@@ -26,7 +26,7 @@ import { Icon } from 'astro-icon/components';
     </div>
 
     <div class="mx-10 flex flex-shrink-0 flex-col gap-2 text-white md:w-1/3 md:items-start">
-      <b class="pt-4 ">ACE</b>
+      <b class="pt-4">ACE</b>
       <p>Department of CSE</p>
       <p class="">NMAM Institute of Technology, Nitte, Karkala Taluk, Udupi-574110 Karnataka, India</p>
     </div>
@@ -36,12 +36,12 @@ import { Icon } from 'astro-icon/components';
     <p class="px-5 py-5 text-start">
       ACE © {new Date().getFullYear()}
     </p>
-    <img src="images/top-button.svg" alt="top" class="" />
+    <img src="/images/top-button.svg" alt="top" class="" />
   </div>
 </footer>
 
 <div class="torch relative w-full h-fit hidden md:block mb-4">
-  <img src="images/aceweb2.png" alt="" class="object-center torch-img w-auto mx-auto object-fill" />
+  <img src="/images/aceweb2.png" alt="" class="object-center torch-img w-auto mx-auto object-fill" />
 </div>
 
 <style>
@@ -55,11 +55,11 @@ import { Icon } from 'astro-icon/components';
   }
   .torch:hover {
     mask-image: radial-gradient(
-      circle at calc(var(--x) + 1.5 * var(--radius)) calc(var(--y) + (var(--radius) / 2)),
+      circle at calc(var(--x) + var(--radius)) calc(var(--y) + (var(--radius) / 2)),
       rgba(19, 21, 26, 0.95) var(--radius),
       var(--mask-color) 20%
     );
-    cursor: url('images/torch.png'), auto;
+    cursor: url('/images/torch.png'), auto;
   }
   .torch img {
     mask-image: repeating-linear-gradient(
