--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -228,6 +228,7 @@ const faculty = [
   align-items: center;
   flex-wrap: wrap;
   margin: 40px 0;
+  gap: 50px;
 }
 
 @keyframes fadeInUp {
@@ -265,6 +266,7 @@ const faculty = [
   background-size: 200% 200%;
   background-position: 100% 0;
   transition: background-position 0.4s ease-in-out;
+ 
 }
 
 .card.show {
