Fix:Rows issue in teams

--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -228,7 +228,7 @@ const faculty = [
   align-items: center;
   flex-wrap: wrap;
   margin: 40px 0;
-  gap: 50px;
+  gap: 50px; /*gap between the cards*/
 }
 
 @keyframes fadeInUp {
