--- a/src/pages/developers.astro
+++ b/src/pages/developers.astro
@@ -10,7 +10,7 @@ const developers = [
   { name: 'Anant Shetty', description: '"HTML+ Golang"', linkedinLink: '#', githubLink: '#', instagramLink: '#' },
   { name: 'Ameesha Ruzario', description: '"Hola Amigo"', linkedinLink: '#', githubLink: '#', instagramLink: '#' },
   { name: 'Bhavya Nayak', description: '"A retired CR', linkedinLink: '#', githubLink: '#', instagramLink: '#' },
-  { name: 'Chinmayee Bhat', description: '"Sings"', linkedinLink: '#', githubLink: '#', instagramLink: '#' },
+  { name: 'Chinmayee Bhat', description: '"Sings"', linkedinLink: 'https://www.linkedin.com/in/chinmayee-bhat-644454259/', githubLink: 'https://github.com/CHINMAYEEBHAT', instagramLink: 'https://www.instagram.com/chinmayeebhat_sings/' },
   { name: 'Chinmay Billawa', description: '"Just out of closet"', linkedinLink: '#', githubLink: '#', instagramLink: '#' },
   { name: 'Dilshan', description: '"Im very decent"', linkedinLink: '#', githubLink: '#', instagramLink: '#' },
   { name: 'Varun Arkal', description: '"All hail me"', linkedinLink: '#', githubLink: '#', instagramLink: '#' },
