--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -229,6 +229,7 @@ const faculty = [
   flex-wrap: wrap;
   margin: 40px 0;
   gap: 50px; /*gap between the cards*/
+  
 }
 
 @keyframes fadeInUp {
@@ -255,14 +256,14 @@ const faculty = [
   align-items: center;
   background: linear-gradient(
   45deg,
-      transparent,
-      #64cfe2d4 40%,
-      rgba(6, 100, 252, 0.506),
-      rgba(6, 100, 252, 0.285) 60%,
+      
+      #64cfe243 40%,
+      rgba(6, 100, 252, 0.414),
+      rgba(6, 100, 252, 0.317) 60%,
       transparent
     );
   opacity: 0; /* Initially hidden */
-  transform: translateY(50px); /* Start the card slightly below */
+  /* Start the card slightly below */
   background-size: 200% 200%;
   background-position: 100% 0;
   transition: background-position 0.4s ease-in-out;
@@ -273,9 +274,7 @@ const faculty = [
   animation: fadeInUp 0.6s forwards;
 }
 
-.card:hover {
-  background-position: 0% 100%; /* Shift the gradient when hovered */
-}
+
 
 .card.visible {
   opacity: 1; /* Fade-in */
