refactored fluid effect

--- a/src/components/FluidEffect.astro
+++ b/src/components/FluidEffect.astro
@@ -8,7 +8,5 @@
     height: 100dvh;
   }
 </style>
-<script >
-  import {initFluid } from "../script/fluid_anim"
-initFluid()
+<script src="../script/fluid_anim.js">
 </script>
