--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,12 +3,13 @@ import Gallery from '@components/landing/Gallery.astro';
 import Layout from '../layouts/Layout.astro';
 import Events from '@components/landing/Events.astro';
 import Testimonial from '@components/landing/Testimonials.astro';
+import FluidEffect from '@components/FluidEffect.astro';
 
 ---
 
 <Layout title="ACE">
   <main>
-    <canvas id="fluid"></canvas>
+    <FluidEffect/>
     <!-- hero -->
     <section class="hero content-container flex flex-col items-center justify-between py-6 md:py-16">
       <div></div>
